[package]
name = "mdbook-pagebreaks"
description = "A mdbook preprocessor to insert page breaks"
version = "0.2.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["cargo", "wrap_help"] }
mdbook = "0.4.40"
semver = "1.0.23"
serde_json = "1.0"
regex = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
