[package]
name = "mdbook-pagebreaks"
description = "A mdbook preprocessor to insert page breaks when rendering to HTML"
version = "0.3.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/testingrequired/mdbook-pagebreaks"
categories = [
    "command-line-utilities",
    "text-processing",
    "parser-implementations",
]
keywords = ["mdbook", "html"]
authors = ["Kylee Tilley <kyleetilley@gmail.com>"]

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["cargo", "wrap_help"] }
mdbook = "0.4.40"
semver = "1.0.23"
serde_json = "1.0"
regex = "1"

[dev-dependencies]
pretty_assertions = "1.4.1"
